# scorpion

./: Readme.md  measure.txt  ssh_guide.txt
Exercise5/: BootstapFilterPseudoCode.txt  CMakeLists.txt  DriveCtl.cpp  DriveCtl.hpp  Makefile  README.txt  calibration_params_MacBookPro.yml  calibration_params_frindo.yml  camera.cc  camera.h  camera.py  camera_calibrator.cc  checkerboard_generator.cc  exercise5.cc  exercise5.py  index.h  measurement.c  measurement.cpp  measurement.h  measurement.hpp  particle.py  particleFilter.cpp  particleFilter.hpp  particles.cc  particles.h  random_numbers.cc  random_numbers.h  random_numbers.py  state.hpp  stateMachine.cpp  stateMachine.hpp  util.c  util.cpp  util.h  util.hpp
calibrate/: calibrate.cpp  makefile
cv-test-2/: cloud.cpp  cloud.hpp  colorFilter.cpp  colorFilter.hpp  locator-test.cpp  locator.cpp  locator.hpp  makefile  poly.cpp  poly.hpp
drive/: DriveCtl.cpp  DriveCtl.hpp  main.cpp  makefile  opencv
eight/: eight  eight.c  makefile
exam_2015/: IR_Sensors.cpp  IR_Sensors.hpp  Makefile  Makefile.def  main.cpp  particles.cpp  particles.hpp
find_box/: colorFilter.cpp  locator.cpp  locator.hpp  main.cpp  opencv
gototest/: Sensor.cpp  Sensor.h  obstacle_avoidance.cpp
new_filter/: colorFilter.hpp  main.cpp  makefile  opencv
oa-2/: .IrSensor.cpp.swp  .IrSensor.h.swp  .Sensor.h.swp  .SensorGroup.cpp.swp  .SensorGroup.h.swp  .obstacle_avoidance.cpp.swp  IrSensor.cpp  IrSensor.h  Sensor.h  SensorGroup.cpp  SensorGroup.h  obstacle_avoidance.cpp
obstacle_avoidance/: Sensor.cpp  Sensor.h  Sensors.cpp  Sensors.h  makefile  (+3 more)
(+54 files in other folders)
